[package]
name = "solar_sim"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "4b173090a7" }

[[bin]]
name = "client_solar_sim"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_solar_sim"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]